--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ juris
 <link rel="stylesheet" href="./css/style.css"/>
 <link rel="stylesheet" href="./css/bootstrap.css"/>
 <link rel="stylesheet" href="./css/bootstrap-rtl.css"/>
-
+<script data-ad-client="ca-pub-4070706477071379" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 <body>
@@ -145,7 +145,7 @@ var isDebug = false;
 <p>
 لمعرفة اخر التحديتات يرجى زيارة موقع
 </p>
-<a href="https://ramedde2001.github.io/f/">الموقع</a>
+<a href="https://ramedde2001.github.io/">الموقع</a>
 
 
                     </div>
